baml_language/crates/baml_tests/snapshots/compiles/catch_all_keyword/baml_tests__compiles__catch_all_keyword__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 7844
---
=== PPIR ===
function user.CatchAllTyped(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all (e) { string => "caught string", int => "caught int" }
}
function user.CatchAllWildcard(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all (e) { _ => "caught all" }
}
function user.CatchThenCatchAll(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { string => "caught string" } catch_all (e2) { _ => "caught rest" }
}
function user.MayFailIntOrString(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "string error", 1 => throw 42, _ => "ok" }
}
function user.PartialCatch(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { string => "caught string" }
}
