baml_language/crates/baml_tests/snapshots/compiles/catch_all_keyword/baml_tests__compiles__catch_all_keyword__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.CatchAllTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int";
        goto -> bb6;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.CatchAllWildcard(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        throw_if_panic copy _2 -> bb2;
    }

    bb2: {
        _0 = const "caught all";
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.CatchThenCatchAll(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb5, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        throw_if_panic copy _2 -> bb3;
    }

    bb3: {
        _0 = const "caught rest";
        goto -> bb5;
    }

    bb4: {
        _0 = const "caught string";
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb4, 1: bb3, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const 42_i64;
    }

    bb4: {
        throw const "string error";
    }
}

fn user.PartialCatch(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}
