baml_language/crates/baml_tests/snapshots/compiles/catch_all_keyword/baml_tests__compiles__catch_all_keyword__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 5066
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
