baml_language/crates/baml_tests/snapshots/compiles/catch_all_keyword/baml_tests__compiles__catch_all_keyword__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.CatchAllTyped(x: int) -> string {
    load_var x
    call user.MayFailIntOrString
    jump L4
    load_var e
    is_type string
    pop_jump_if_false L0
    jump L3

  L0:
    load_var e
    is_type int
    pop_jump_if_false L1
    jump L2

  L1:
    load_var e
    throw

  L2:
    load_const "caught int"
    jump L4

  L3:
    load_const "caught string"

  L4:
    return
}

function user.CatchAllWildcard(x: int) -> string {
    load_var x
    call user.MayFailIntOrString
    jump L0
    load_var e
    throw_if_panic
    load_const "caught all"

  L0:
    return
}

function user.CatchThenCatchAll(x: int) -> string {
    load_var x
    call user.MayFailIntOrString
    jump L2
    load_var _2
    is_type string
    pop_jump_if_false L0
    jump L1

  L0:
    load_var _2
    throw_if_panic
    load_const "caught rest"
    jump L2

  L1:
    load_const "caught string"

  L2:
    return
}

function user.MayFailIntOrString(x: int) -> string {
    load_var x
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L3

  L0:
    load_var x
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L2

  L1:
    load_const "ok"
    return

  L2:
    load_const 42
    throw

  L3:
    load_const "string error"
    throw
}

function user.PartialCatch(x: int) -> string {
    load_var x
    call user.MayFailIntOrString
    jump L2
    load_var e
    is_type string
    pop_jump_if_false L0
    jump L1

  L0:
    load_var e
    throw

  L1:
    load_const "caught string"

  L2:
    return
}
